Fix journal entry transparency issue, add more detailed journal dark mode

--- a/css/camp/hud.css
+++ b/css/camp/hud.css
@@ -1,4 +1,5 @@
-.pageFrameView #mousehuntContainer.PageCamp .gameHeader::before {
+.pageFrameView #mousehuntContainer.PageCamp .gameHeader::before,
+.pageFrameView #mousehuntContainer.PageJournal .gameHeader::before {
     /* dimming filter on game HUD */
     content: "";
     position: absolute;
