--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,7 @@
     --mhdm-xlbrown: #f6f3eb;
 
     --mhdm-dimming-filter: rgba(0, 0, 0, 0.12);
+    --mhdm-journal-bg: #f5f5f5;
 }
 
 /*SCROLL BAR FOR NON BODY ELEMENTS*/
